--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ h4 {
 }
 
 h5 {
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 400;
 }
 
@@ -98,8 +98,8 @@ i{
 
 /* -------------nav-------------- */
 .navBar{
-    flex-basis: 25%;
-    max-width: 20rem;
+    flex-basis: 20%;
+    width: 100%;
     height: 100vh;
     background: var(--color-primary);
     margin: 1rem;
@@ -107,7 +107,7 @@ i{
     border-radius: 15px;
 }
 
-.navHeader{
+.Header{
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -124,15 +124,16 @@ i{
 
 .navLink{
     padding: 0.2rem 1rem;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     font-weight: 500;
 }
 
 /* ------------------todoist------------------------ */
 
 .todoist{
-    flex-basis: 50%;
     padding: 1rem 2rem;
+    /* flex-basis: 50%; */
+    width: auto;
 }
 
 .time, .noOfTasks{
@@ -143,6 +144,48 @@ i{
     margin: 0 2rem;
     padding: 0 1rem;
     font-weight: 400;
-    background-color: var(--color-primary);
+    border: 1px solid var(--color-primary);
     border-radius: 8px;
+}
+
+/* -----------------------------task------------------- */
+
+.addtaskContainer{
+    margin: 3rem 0 1rem;
+}
+
+.addTaskBtn{
+    border: 1px solid var(--color-primary);
+    padding: 1rem;
+    border-radius: 5px;
+    width: 100%;
+    cursor: pointer;
+}
+
+.tasks{
+    padding: 1rem;
+    border-bottom: 1px solid var(--color-primary);
+    cursor: pointer;
+}
+
+.taskTitle{
+    display: flex;
+    justify-content: space-between;
+    font-size: 1.5rem;
+}
+
+.taskSpecs{
+    display: grid;
+    padding: 1rem 0 0; 
+    grid-template-columns: repeat(6, 1fr);
+}
+
+/* -----------------------taskCustomizerContainer--------------- */
+.taskCustomizerContainer{
+    display: none;
+    margin: 1rem;
+    padding: 1.5rem;
+    flex-basis: 30%;
+    background-color: var(--color-primary);
+    border-radius: 15px;
 }
