--- a/src/style.css
+++ b/src/style.css
@@ -98,8 +98,8 @@ i{
 
 /* -------------nav-------------- */
 .navBar{
-    flex-basis: 20%;
-    width: 100%;
+    /* flex-basis: 20%; */
+    width: 20%;
     height: 100vh;
     background: var(--color-primary);
     margin: 1rem;
@@ -133,7 +133,7 @@ i{
 .todoist{
     padding: 1rem 2rem;
     /* flex-basis: 50%; */
-    width: auto;
+    width: 80%;
 }
 
 .time, .noOfTasks{
@@ -182,10 +182,27 @@ i{
 
 /* -----------------------taskCustomizerContainer--------------- */
 .taskCustomizerContainer{
-    display: none;
+    /* display: none; */
     margin: 1rem;
     padding: 1.5rem;
     flex-basis: 30%;
     background-color: var(--color-primary);
     border-radius: 15px;
+}
+
+.input--customization{
+    margin: 3rem 0 1rem;
+}
+
+.input--customization .input{
+    margin-bottom: 20px;
+}
+
+input, textarea{
+    font-size: 1rem;
+    padding: 10px 20px;
+    width: 100%;
+    border-radius: 3px;
+    background-color: transparent;
+    border: 1px solid var(--color-black);
 }
