--- a/src/style.css
+++ b/src/style.css
@@ -52,36 +52,59 @@ a{
     color: #222;
 }
 
-.btn {
+/* .btn {
     background: var(--color-black);
     color: var(--color-white);
     display: inline-block;
     width: fit-content;
-    padding: 0.8rem 1.6rem;
+    padding: 0.6rem 1.4rem;
     border: 1px solid transparent;
     cursor: pointer;
 }
 
 .btn:hover {
-    background: var(--color-light);
+    background: var(--color-white);
     color: var(--color-black);
+    border: 1px solid var(--color-black);
+    transition: all 400ms ease;
+} */
+
+.btn{
+    background: var(--color-white);
+    color: var(--color-black);
+    border: 1px solid var(--color-black);
+    display: inline-block;
+    width: fit-content;
+    padding: 0.6rem 1.4rem;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background: var(--color-black);
+    color: var(--color-white);
     transition: all 400ms ease;
 }
 
 .btnPrimary {
-    background: var(--color-primary);
-    color: var(--color-white);
+    background: var(--color-secondary);
+    color: var(--color-black);
+    display: inline-block;
+    width: fit-content;
+    padding: 0.6rem 1.4rem;
+    border: 1px solid transparent;
+    cursor: pointer;
 }
 
 .btnPrimary:hover {
-    border-color: var(--color-primary);
-    background: var(--color-secondary);
-    color: var(--color-primary);
+    border-color: var(--color-black);
+    background: var(--color-white);
+    color: var(--color-black);
 }
 
 .btnLg {
-    padding: 1.1rem 2rem;
+    padding: 0.8rem 1.8rem;
     font-size: 1.2rem;
+    border-radius: 5px;
 }
 
 i{
@@ -185,13 +208,14 @@ i{
     /* display: none; */
     margin: 1rem;
     padding: 1.5rem;
-    flex-basis: 30%;
+    width: 31%;
     background-color: var(--color-primary);
     border-radius: 15px;
+    position: relative;
 }
 
 .input--customization{
-    margin: 3rem 0 1rem;
+    margin: 1.5rem 0 1rem;
 }
 
 .input--customization .input{
@@ -205,4 +229,28 @@ input, textarea{
     border-radius: 3px;
     background-color: transparent;
     border: 1px solid var(--color-black);
+}
+
+.input--due__date input, select{
+    padding: 10px 20px;
+    width: 12rem;
+    margin-left: 10px;
+    border-radius: 3px;
+    background-color: transparent;
+    border: 1px solid var(--color-black);
+}
+
+.priorityBtn .btn{
+    margin: 1rem 0;
+    margin-bottom: 4rem;
+}
+
+.input--save{
+    position: absolute;
+    bottom: 0rem;
+    margin: 2rem 0;
+}
+
+.btn--save{
+    margin-left: 1rem;
 }
