--- a/src/style.css
+++ b/src/style.css
@@ -185,6 +185,10 @@ i{
     cursor: pointer;
 }
 
+.addTaskBtn:hover{
+    background-color: var(--color-primary);
+}
+
 .tasks{
     padding: 1rem;
     border-bottom: 1px solid var(--color-primary);
@@ -205,13 +209,17 @@ i{
 
 /* -----------------------taskCustomizerContainer--------------- */
 .taskCustomizerContainer{
-    /* display: none; */
+    display: none;
     margin: 1rem;
     padding: 1.5rem;
     width: 31%;
     background-color: var(--color-primary);
     border-radius: 15px;
     position: relative;
+}
+
+.closeIcon{
+    cursor: pointer;
 }
 
 .input--customization{
