new color add in css

--- a/src/style.css
+++ b/src/style.css
@@ -16,6 +16,12 @@
     --color-secondary: #F2BE22;
     --color-black: #222;
     --color-white: #ffff;
+    --text: #04160c;
+    --background: #e9fbf2;
+    --primary: #75e6aa;
+    --secondary: #c3f4da;
+    --accent: #24c670;
+
 }
 
 h1,h2,h3,h4,h5,p{
