--- a/src/style.css
+++ b/src/style.css
@@ -215,12 +215,16 @@ i{
 .taskSpecs{
     display: grid;
     padding: 1rem 0 0; 
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(3, 1fr) 40px;
 }
 
 .taskCheck{
-    font-size: 1.2rem;
-
+    padding: 10px;
+    cursor: pointer;
+    border: 1px solid var(--primary);
+    border-radius: 5px;
+    color: var(--text);
+    font-weight: 700;
 }
 
 .taskOptionalData{
@@ -229,7 +233,7 @@ i{
 
 /* ---------------toggle task checkbox css--------------  */
 .checked{
-    color: var(--primary);
+    background-color: var(--primary);
 }
 
 .taskcomplete{
