--- a/src/style.css
+++ b/src/style.css
@@ -200,6 +200,7 @@ i{
 }
 
 .tasks{
+    margin: 0.5rem 0;
     padding: 1rem;
     border-bottom: 1px solid var(--primary);
     cursor: pointer;
@@ -237,7 +238,7 @@ i{
 }
 
 .taskcomplete{
-    opacity: 0.6;
+    opacity: 0.4;
 }
 
 .titleLine{
