--- a/src/style.css
+++ b/src/style.css
@@ -130,8 +130,9 @@ i{
 }
 
 /* -------------nav-------------- */
+/*
 .navBar{
-    /* flex-basis: 20%; */
+    flex-basis: 20%;
     width: 20%;
     height: 100vh;
     background: var(--secondary);
@@ -160,13 +161,20 @@ i{
     font-size: 1.2rem;
     font-weight: 500;
 }
-
+*/
 /* ------------------todoist------------------------ */
 
 .todoist{
+    margin: 0 10rem;
     padding: 1rem 2rem;
     /* flex-basis: 50%; */
-    width: 80%;
+    width: 100%;
+}
+
+.todoistHeader{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .time, .noOfTasks{
@@ -260,7 +268,7 @@ i{
     display: none;
     margin: 1rem;
     padding: 1.5rem;
-    width: 31%;
+    width: 30%;
     background-color: var(--secondary);
     border-radius: 15px;
     position: relative;
